Fix blob auth by moving blob endpoints into the channel
